# research_library

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app_ui.py  baseline_agent.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  research_librarian_environment.py  test_rewards.py
data/: nodes.json  tasks.json
